# web_axum

./: Cargo.toml  app.toml  orm.sql  readme.txt
order/: Cargo.toml
product/: Cargo.toml
product/src/: main.rs
src/: lib.rs  main.rs
src/config/: app_config.rs  mod.rs  status_code.rs
src/entities/: mod.rs  prelude.rs  wb_comment.rs  wb_feed.rs  wb_follower.rs  wb_like.rs  wb_post.rs  wb_user.rs  wb_user_expanded.rs  wb_user_info.rs
src/handler/: feed.rs  follower.rs  post.rs  user.rs
src/middleware/: jwt.rs
src/model/: feed.rs  follower.rs  mod.rs  post.rs  user.rs
src/router/: feed.rs  follower.rs  mod.rs  post.rs  user.rs
src/service/: feed.rs  follower.rs  mod.rs  post.rs  user.rs
src/test/: abc.rs  mod.rs  wb_user.rs
src/utils/: crypto.rs  error.rs  jwt.rs  mod.rs  result.rs  time.rs  validate.rs  warp.rs
tests/: test_expand.rs
